--- a/session7/complete/session7.ipynb
+++ b/session7/complete/session7.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "74924584",
+   "id": "3cb583ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cdf18a0",
+   "id": "c08453a9",
    "metadata": {},
    "source": [
     "### Exercise 1\n",
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "4212c3b9",
+   "id": "d90b11e4",
    "metadata": {},
    "outputs": [
     {
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a96185fd",
+   "id": "afd777fe",
    "metadata": {},
    "source": [
     "### Exercise 2\n",
@@ -76,7 +76,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "634f6e41",
+   "id": "a49a1e62",
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04d72989",
+   "id": "45d0c28a",
    "metadata": {},
    "source": [
     "### Exercise 3\n",
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "f5802a56",
+   "id": "aed13d52",
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +123,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.008s\n",
+      "Ran 1 test in 0.001s\n",
       "\n",
       "OK\n"
      ]
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05ff2fe0",
+   "id": "7859c823",
    "metadata": {},
    "source": [
     "### Exercise 4\n",
@@ -152,7 +152,45 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "87ba1bd0",
+   "id": "8ab6f0db",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.001s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 4\n",
+    "\n",
+    "reload(network)\n",
+    "run(network.GetHeadersMessageTest('test_serialize'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "85206c15",
+   "metadata": {},
+   "source": [
+    "### Exercise 5\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session7/network.py) pass: `network.py:HeadersMessageTest:test_parse`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "79d87b76",
    "metadata": {},
    "outputs": [
     {
@@ -168,44 +206,6 @@
     }
    ],
    "source": [
-    "# Exercise 4\n",
-    "\n",
-    "reload(network)\n",
-    "run(network.GetHeadersMessageTest('test_serialize'))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "eacf5f26",
-   "metadata": {},
-   "source": [
-    "### Exercise 5\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "#### Make [this test](/edit/session7/network.py) pass: `network.py:HeadersMessageTest:test_parse`"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "c19f04ae",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      ".\n",
-      "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.003s\n",
-      "\n",
-      "OK\n"
-     ]
-    }
-   ],
-   "source": [
     "# Exercise 5\n",
     "\n",
     "reload(network)\n",
@@ -215,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9b7b68cd",
+   "id": "ebbe6ade",
    "metadata": {},
    "outputs": [
     {
@@ -237,7 +237,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5d2cfc2",
+   "id": "64ac7888",
    "metadata": {},
    "source": [
     "### Exercise 6\n",
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "3b4bfb11",
+   "id": "a143d379",
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +260,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.018s\n",
+      "Ran 1 test in 0.270s\n",
       "\n",
       "OK\n"
      ]
@@ -276,7 +276,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "4e0797bd",
+   "id": "0dbceef5",
    "metadata": {},
    "outputs": [
     {
@@ -338,7 +338,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddfb321d",
+   "id": "ae53d744",
    "metadata": {},
    "source": [
     "### Exercise 7\n",
@@ -348,7 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "2e5c2564",
+   "id": "0aba42d2",
    "metadata": {},
    "outputs": [
     {
@@ -431,7 +431,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "7dbe6ecc",
+   "id": "21ff130e",
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +453,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb3d20af",
+   "id": "1b802a4d",
    "metadata": {},
    "source": [
     "### Exercise 8\n",
@@ -467,7 +467,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "1635f392",
+   "id": "2e2a292c",
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0129c41",
+   "id": "de960e23",
    "metadata": {},
    "source": [
     "### Exercise 9\n",
@@ -509,7 +509,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "bfb4f8c1",
+   "id": "aa2742d6",
    "metadata": {},
    "outputs": [
     {
@@ -518,7 +518,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.007s\n",
       "\n",
       "OK\n"
      ]
@@ -534,7 +534,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "2363085c",
+   "id": "66d5af72",
    "metadata": {},
    "outputs": [
     {
@@ -569,7 +569,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23ce1085",
+   "id": "9c9f8730",
    "metadata": {},
    "source": [
     "### Exercise 10\n",
@@ -586,7 +586,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "1dd3e1e2",
+   "id": "b5f3fda1",
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45a325e2",
+   "id": "4784f0b8",
    "metadata": {},
    "source": [
     "### Exercise 11\n",
@@ -643,7 +643,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "1be72ade",
+   "id": "ed35bcb1",
    "metadata": {},
    "outputs": [
     {
@@ -652,7 +652,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.007s\n",
       "\n",
       "OK\n"
      ]
@@ -668,7 +668,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "d8239779",
+   "id": "9ed4f0d3",
    "metadata": {},
    "outputs": [
     {
@@ -704,7 +704,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8016ace0",
+   "id": "74d3ce7d",
    "metadata": {},
    "source": [
     "### Exercise 12\n",
@@ -727,7 +727,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "3dd2af47",
+   "id": "01925e54",
    "metadata": {},
    "outputs": [
     {
@@ -769,7 +769,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17d3d177",
+   "id": "7f89c921",
    "metadata": {},
    "source": [
     "### Exercise 13\n",
@@ -783,7 +783,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "4a227b45",
+   "id": "e329dc01",
    "metadata": {},
    "outputs": [
     {
@@ -792,7 +792,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.005s\n",
+      "Ran 1 test in 0.008s\n",
       "\n",
       "OK\n"
      ]
@@ -808,7 +808,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "d9e0b1fb",
+   "id": "d28ffbb4",
    "metadata": {},
    "outputs": [
     {
@@ -837,7 +837,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c29fdf8c",
+   "id": "dfd2e1c4",
    "metadata": {},
    "source": [
     "### Exercise 14\n",
@@ -866,7 +866,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "e67c392f",
+   "id": "f5d119d0",
    "metadata": {},
    "outputs": [
     {
@@ -905,7 +905,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d45e552d",
+   "id": "edd00901",
    "metadata": {},
    "source": [
     "### Exercise 15\n",
@@ -919,7 +919,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "8655b4b8",
+   "id": "050a77af",
    "metadata": {},
    "outputs": [
     {
@@ -928,7 +928,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.004s\n",
       "\n",
       "OK\n"
      ]
@@ -943,11 +943,48 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70f37802",
+   "id": "7d68f939",
    "metadata": {},
    "source": [
     "### Exercise 16\n",
-    "network:GetDataMessageTest:test_serialize:\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session7/network.py) pass: `network.py:GetDataMessageTest:test_serialize`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "af3866bf",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.008s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Exercise 16\n",
+    "\n",
+    "reload(network)\n",
+    "run(network.GetDataMessageTest('test_serialize'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a44ec21",
+   "metadata": {},
+   "source": [
+    "### Exercise 17\n",
     "Validate the merkle root for this block from Testnet via network protocol:\n",
     "Block Hash:\n",
     "```\n",
@@ -957,8 +994,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "id": "7f6e6c3d",
+   "execution_count": 24,
+   "id": "784626a5",
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +1007,7 @@
     }
    ],
    "source": [
-    "# Exercise 16\n",
+    "# Exercise 17\n",
     "\n",
     "from network import SimpleNode, GetDataMessage, BLOCK_DATA_TYPE\n",
     "from block import Block\n",
