--- a/session7/session7.ipynb
+++ b/session7/session7.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "74924584",
+   "id": "3cb583ae",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1cdf18a0",
+   "id": "c08453a9",
    "metadata": {},
    "source": [
     "### Exercise 1\n",
@@ -30,7 +30,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d41c476d",
+   "id": "c6ba2032",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a96185fd",
+   "id": "afd777fe",
    "metadata": {},
    "source": [
     "### Exercise 2\n",
@@ -67,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "634f6e41",
+   "id": "a49a1e62",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "04d72989",
+   "id": "45d0c28a",
    "metadata": {},
    "source": [
     "### Exercise 3\n",
@@ -93,7 +93,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5802a56",
+   "id": "aed13d52",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "05ff2fe0",
+   "id": "7859c823",
    "metadata": {},
    "source": [
     "### Exercise 4\n",
@@ -119,7 +119,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87ba1bd0",
+   "id": "8ab6f0db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eacf5f26",
+   "id": "85206c15",
    "metadata": {},
    "source": [
     "### Exercise 5\n",
@@ -145,7 +145,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c19f04ae",
+   "id": "79d87b76",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9b7b68cd",
+   "id": "ebbe6ade",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -172,7 +172,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e5d2cfc2",
+   "id": "64ac7888",
    "metadata": {},
    "source": [
     "### Exercise 6\n",
@@ -186,7 +186,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b4bfb11",
+   "id": "a143d379",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,7 +199,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e0797bd",
+   "id": "0dbceef5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ddfb321d",
+   "id": "ae53d744",
    "metadata": {},
    "source": [
     "### Exercise 7\n",
@@ -245,7 +245,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6c4a8df4",
+   "id": "d40a75b2",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -301,7 +301,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7dbe6ecc",
+   "id": "21ff130e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -315,7 +315,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cb3d20af",
+   "id": "1b802a4d",
    "metadata": {},
    "source": [
     "### Exercise 8\n",
@@ -329,7 +329,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "046ff78a",
+   "id": "128bb2da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d0129c41",
+   "id": "de960e23",
    "metadata": {},
    "source": [
     "### Exercise 9\n",
@@ -362,7 +362,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bfb4f8c1",
+   "id": "aa2742d6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2363085c",
+   "id": "66d5af72",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -400,7 +400,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "23ce1085",
+   "id": "9c9f8730",
    "metadata": {},
    "source": [
     "### Exercise 10\n",
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4bbea4f7",
+   "id": "67295d35",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "45a325e2",
+   "id": "4784f0b8",
    "metadata": {},
    "source": [
     "### Exercise 11\n",
@@ -463,7 +463,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1be72ade",
+   "id": "ed35bcb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -476,7 +476,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d8239779",
+   "id": "9ed4f0d3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8016ace0",
+   "id": "74d3ce7d",
    "metadata": {},
    "source": [
     "### Exercise 12\n",
@@ -527,7 +527,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87b570a0",
+   "id": "ba857483",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -560,7 +560,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17d3d177",
+   "id": "7f89c921",
    "metadata": {},
    "source": [
     "### Exercise 13\n",
@@ -574,7 +574,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4a227b45",
+   "id": "e329dc01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +587,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9e0b1fb",
+   "id": "d28ffbb4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,7 +608,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c29fdf8c",
+   "id": "dfd2e1c4",
    "metadata": {},
    "source": [
     "### Exercise 14\n",
@@ -637,7 +637,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cd72d8e6",
+   "id": "c149f365",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d45e552d",
+   "id": "edd00901",
    "metadata": {},
    "source": [
     "### Exercise 15\n",
@@ -681,7 +681,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8655b4b8",
+   "id": "050a77af",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,11 +693,36 @@
   },
   {
    "cell_type": "markdown",
-   "id": "70f37802",
+   "id": "7d68f939",
    "metadata": {},
    "source": [
     "### Exercise 16\n",
-    "network:GetDataMessageTest:test_serialize:\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "#### Make [this test](/edit/session7/network.py) pass: `network.py:GetDataMessageTest:test_serialize`"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af3866bf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Exercise 16\n",
+    "\n",
+    "reload(network)\n",
+    "run(network.GetDataMessageTest('test_serialize'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a44ec21",
+   "metadata": {},
+   "source": [
+    "### Exercise 17\n",
     "Validate the merkle root for this block from Testnet via network protocol:\n",
     "Block Hash:\n",
     "```\n",
@@ -708,11 +733,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4e22023a",
+   "id": "6ff013bf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Exercise 16\n",
+    "# Exercise 17\n",
     "\n",
     "from network import SimpleNode, GetDataMessage, BLOCK_DATA_TYPE\n",
     "from block import Block\n",
