--- a/session8/session8.ipynb
+++ b/session8/session8.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a8ca7f10",
+   "id": "78941a24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b7a04b75",
+   "id": "35fbc0d2",
    "metadata": {},
    "source": [
     "### Exercise 1\n",
@@ -31,7 +31,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7117aa9a",
+   "id": "247a6b8d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "caaa17c6",
+   "id": "cef750cb",
    "metadata": {},
    "source": [
     "### Exercise 2\n",
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3369dd81",
+   "id": "ca6b2a78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,6 @@
     "from script import p2pkh_script\n",
     "from tx import Tx\n",
     "block_hash = bytes.fromhex('<block hash from class>')  # CHANGE\n",
-    "block_height = -1  # CHANGE\n",
     "passphrase = b'<your passphrase here>'  # CHANGE\n",
     "secret = little_endian_to_int(hash256(passphrase))\n",
     "private_key = PrivateKey(secret=secret)\n",
@@ -93,7 +92,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "757257fb",
+   "id": "d8a1acf4",
    "metadata": {},
    "source": [
     "### Exercise 3\n",
@@ -107,7 +106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d354a1dd",
+   "id": "b34428bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +118,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c94a148b",
+   "id": "de5b652b",
    "metadata": {},
    "source": [
     "### Exercise 4\n",
@@ -135,7 +134,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bf9c356d",
+   "id": "8c14f608",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -147,7 +146,7 @@
     "from network import GetDataMessage, SimpleNode, BLOCK_DATA_TYPE\n",
     "from script import p2pkh_script\n",
     "from tx import Tx, TxIn, TxOut\n",
-    "start_block_hex = '<insert from class>'  # CHANGE\n",
+    "block_hex = '<insert from class>'  # CHANGE\n",
     "block_hash = bytes.fromhex(block_hex)\n",
     "passphrase = b'<get from session 2>'  # CHANGE\n",
     "secret = little_endian_to_int(hash256(passphrase))\n",
@@ -166,8 +165,6 @@
     "\n",
     "# get the block object using the get_block method of node\n",
     "\n",
-    "# initialize the utxos array\n",
-    "\n",
     "# grab the txs from the block using get_transactions\n",
     "\n",
     "# there should be one transaction\n",
@@ -179,7 +176,7 @@
     "\n",
     "    # check if the output has the script pubkey we're looking for\n",
     "\n",
-    "\n",
+    "        # add this tx out as a tx in\n",
     "\n",
     "        # record the amount from this output\n",
     "\n",
